fix: minor corrections in dark mode, fixed waffle menu width

--- a/css/color.scss
+++ b/css/color.scss
@@ -42,9 +42,6 @@ header#header {
 	> a {
 		opacity: 1 !important;
 	}
-	svg {
-		fill: #1f1f1f;
-	}
 }
 
 // central menu
